@@ -22,8 +22,5 @@
 #define COMPANY "RVM"
 #define PROGRAM "smplayer"
 
-#define IS_PLAYLIST_TAG "|smplayer:isplaylist"
-#define IS_PLAYLIST_TAG_RX "\\|smplayer\\:isplaylist$"
-
 #endif
 
